--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
+    "form-data": "^4.0.3",
     "graphql": "^16.11.0",
     "jwks-rsa": "^3.2.0",
+    "mailgun.js": "^12.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
