--- a/package.json
+++ b/package.json
@@ -39,12 +39,16 @@
     "form-data": "^4.0.3",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
+    "graphql-upload-ts": "^2.1.2",
     "jwks-rsa": "^3.2.0",
     "mailgun.js": "^12.0.3",
+    "openai": "^5.10.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.34.3",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -56,6 +60,7 @@
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/graphql-upload": "^17.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
