--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.10.1",
     "apollo-server-express": "^3.13.0",
@@ -48,7 +49,9 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.34.3",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "fluent-ffmpeg": "^2.1.3",
+    "opencv4nodejs": "^5.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
